After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 711057 - Doesn't respect the default owner/group information of directories in /etc
Doesn't respect the default owner/group information of directories in /etc
Status: RESOLVED FIXED
Product: ostree
Classification: Infrastructure
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: OSTree maintainer(s)
OSTree maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-10-29 08:32 UTC by Sjoerd Simons
Modified: 2013-11-04 01:17 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Proposed patch (1.67 KB, patch)
2013-10-29 08:32 UTC, Sjoerd Simons
accepted-commit_now Details | Review

Description Sjoerd Simons 2013-10-29 08:32:39 UTC
Created attachment 258418 [details] [review]
Proposed patch

When doing an intial deployment the owner & group information of directories in /etc aren't copied. This boils down to gs_shutil_cp_a not copying this meta-data for directories. 

Potential fix in attached patch. Unfortunately this means a small semantic change: Ownership information is now copied and if chown fails, the _cp_a will fails as well. Not sure what the rules for libgsystem are wrt. these kind of chagnes
Comment 1 Colin Walters 2013-11-04 01:16:40 UTC
Review of attachment 258418 [details] [review]:

Looks good, thanks!

I just tweaked the commit message slightly to have a topic prefix "shutil:" and a link to the bug at the end.