shutil: Make gs_shutil_cp_a copy ownership as well

Like cp -a gs_shutil_cp_a should really copy all directory metadata.
This adds support for at least copying the ownership metadata
(user/group).

https://bugzilla.gnome.org/show_bug.cgi?id=711057